--- a/po/bn_IN.po
+++ b/po/bn_IN.po
@@ -1,11 +1,11 @@
-# Runa Bhattacharjee <runab@redhat.com>, 2012. #zanata
+# Runa Bhattacharjee <runab@fedoraproject.org>, 2012. #zanata
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-06-27 12:35-0400\n"
 "PO-Revision-Date: 2012-12-12 12:54-0500\n"
-"Last-Translator: Runa Bhattacharjee <runab@redhat.com>\n"
+"Last-Translator: Runa Bhattacharjee <runab@fedoraproject.org>\n"
 "Language-Team: Bengali (India)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
